--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ FALKORDB_PORT=6379
 FALKORDB_PASSWORD=
 
 # OpenAI Configuration (for LLM-based extraction)
-OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_API_KEY=YOUR_KEy
 OPENAI_MODEL=gpt-3.5-turbo
 OPENAI_TEMPERATURE=0.7
 OPENAI_MAX_TOKENS=2000
