--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ FALKORDB_PORT=6379
 FALKORDB_PASSWORD=
 
 # OpenAI Configuration (for LLM-based extraction)
-OPENAI_API_KEY=YOUR_KEy
+OPENAI_API_KEY=OPENAI_API_KEY
 OPENAI_MODEL=gpt-3.5-turbo
 OPENAI_TEMPERATURE=0.7
 OPENAI_MAX_TOKENS=2000
@@ -14,10 +14,16 @@ ENABLE_LLM_EXTRACTION=true
 ENABLE_LLM_ANALYSIS=true
 
 # Logging Configuration
-LOG_LEVEL=INFO
+LOG_LEVEL=DEBUG
 
 # API Configuration
 API_HOST=0.0.0.0
 API_PORT=8000
 API_RELOAD=true
+
+# Reconciliation Settings
+RECON_STORAGE_PATH=reconciliation_rules
+RECON_MIN_CONFIDENCE=0.7
+RECON_ENABLE_LLM=true
+RECON_SAMPLE_SIZE=100
 
