jdbc for connecting source & destination db

--- a/.env
+++ b/.env
@@ -27,3 +27,8 @@ RECON_MIN_CONFIDENCE=0.7
 RECON_ENABLE_LLM=true
 RECON_SAMPLE_SIZE=100
 
+# JDBC Settings (for rule validation with actual databases)
+# Path to directory containing JDBC driver JAR files
+# Place your database drivers here: ojdbc8.jar, mssql-jdbc.jar, postgresql.jar, etc.
+JDBC_DRIVERS_PATH=jdbc_drivers
+
