more tests are added

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ FALKORDB_PORT=6379
 FALKORDB_PASSWORD=
 
 # OpenAI Configuration (for LLM-based extraction)
-OPENAI_API_KEY=OPENAI_API_KEY
+OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_MODEL=gpt-3.5-turbo
 OPENAI_TEMPERATURE=0.7
 OPENAI_MAX_TOKENS=2000
@@ -14,21 +14,117 @@ ENABLE_LLM_EXTRACTION=true
 ENABLE_LLM_ANALYSIS=true
 
 # Logging Configuration
-LOG_LEVEL=DEBUG
+LOG_LEVEL=INFO
 
 # API Configuration
 API_HOST=0.0.0.0
 API_PORT=8000
 API_RELOAD=true
 
-# Reconciliation Settings
-RECON_STORAGE_PATH=reconciliation_rules
-RECON_MIN_CONFIDENCE=0.7
-RECON_ENABLE_LLM=true
-RECON_SAMPLE_SIZE=100
+# =============================================================================
+# JDBC Configuration
+# =============================================================================
+# Path to JDBC driver JAR files
+JDBC_DRIVERS_PATH=D:\\learning\\mysql-connector-j-9.4.0\\mysql-connector-j-9.4.0\\mysql-connector-j-8.0.33.jar
 
-# JDBC Settings (for rule validation with actual databases)
-# Path to directory containing JDBC driver JAR files
-# Place your database drivers here: ojdbc8.jar, mssql-jdbc.jar, postgresql.jar, etc.
-JDBC_DRIVERS_PATH=jdbc_drivers
+# =============================================================================
+# Database Connection Settings for Reconciliation
+# =============================================================================
+# Enable/disable using environment variables for database configs
+# If true, the system will use env configs when no configs are in the request payload
+USE_ENV_DB_CONFIGS=true
+
+# -----------------------------------------------------------------------------
+# SOURCE DATABASE CONFIGURATION
+# -----------------------------------------------------------------------------
+# Database type: oracle, sqlserver, postgresql, mysql
+SOURCE_DB_TYPE=mysql
+
+# Database connection details
+SOURCE_DB_HOST=localhost
+SOURCE_DB_PORT=3306
+SOURCE_DB_DATABASE=ordermgmt
+
+# Database credentials (leave empty for SQL export mode only)
+SOURCE_DB_USERNAME=root
+SOURCE_DB_PASSWORD=Baps@1234
+
+# Oracle-specific: Service name (optional, use instead of SID)
+SOURCE_DB_SERVICE_NAME=
+
+# -----------------------------------------------------------------------------
+# TARGET DATABASE CONFIGURATION
+# -----------------------------------------------------------------------------
+# Database type: oracle, sqlserver, postgresql, mysql
+TARGET_DB_TYPE=mysql
+
+# Database connection details
+TARGET_DB_HOST=localhost
+TARGET_DB_PORT=3306
+TARGET_DB_DATABASE=newamazon
+
+# Database credentials (leave empty for SQL export mode only)
+TARGET_DB_USERNAME=root
+TARGET_DB_PASSWORD=Baps@1234
+
+# Oracle-specific: Service name (optional, use instead of SID)
+TARGET_DB_SERVICE_NAME=
+
+# =============================================================================
+# EXAMPLE CONFIGURATIONS FOR DIFFERENT DATABASE TYPES
+# =============================================================================
+
+# Oracle Example:
+# SOURCE_DB_TYPE=oracle
+# SOURCE_DB_HOST=oracle-server.company.com
+# SOURCE_DB_PORT=1521
+# SOURCE_DB_DATABASE=ORCL
+# SOURCE_DB_USERNAME=schema1_user
+# SOURCE_DB_PASSWORD=your_secure_password
+# SOURCE_DB_SERVICE_NAME=PRODPDB
+
+# SQL Server Example:
+# SOURCE_DB_TYPE=sqlserver
+# SOURCE_DB_HOST=sqlserver.company.com
+# SOURCE_DB_PORT=1433
+# SOURCE_DB_DATABASE=ProductionDB
+# SOURCE_DB_USERNAME=sa
+# SOURCE_DB_PASSWORD=your_secure_password
+
+# PostgreSQL Example:
+# SOURCE_DB_TYPE=postgresql
+# SOURCE_DB_HOST=postgres.company.com
+# SOURCE_DB_PORT=5432
+# SOURCE_DB_DATABASE=production_db
+# SOURCE_DB_USERNAME=postgres
+# SOURCE_DB_PASSWORD=your_secure_password
+
+# MySQL Example:
+# SOURCE_DB_TYPE=mysql
+# SOURCE_DB_HOST=mysql.company.com
+# SOURCE_DB_PORT=3306
+# SOURCE_DB_DATABASE=production_db
+# SOURCE_DB_USERNAME=root
+# SOURCE_DB_PASSWORD=your_secure_password
+
+# =============================================================================
+# SECURITY NOTES
+# =============================================================================
+# 1. NEVER commit .env file to version control - add .env to .gitignore
+# 2. Use read-only database users with SELECT permissions only
+# 3. Use strong passwords (12+ characters, mixed case, numbers, symbols)
+# 4. Rotate credentials regularly (every 90 days)
+# 5. Use different credentials for dev/staging/prod environments
+# 6. Consider using secrets management (AWS Secrets Manager, Azure Key Vault, etc.)
+#
+# Configuration Priority (highest to lowest):
+# 1. Request payload (source_db_config in API request)
+# 2. Environment variables (this file)
+# 3. None (SQL export mode - no database execution)
+#
+# To use environment-based configs:
+# - Copy .env.example to .env
+# - Fill in database credentials
+# - Set USE_ENV_DB_CONFIGS=true
+# - Make API requests without source_db_config/target_db_config in payload
 
