--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,14 @@ services:
       # JDBC Settings
       - JDBC_DRIVERS_PATH=/app/jdbc_drivers
 
+      # MongoDB Settings (for reconciliation results storage)
+      - MONGODB_HOST=mongodb
+      - MONGODB_PORT=27017
+      - MONGODB_USERNAME=${MONGODB_USERNAME:-admin}
+      - MONGODB_PASSWORD=${MONGODB_PASSWORD:-admin123}
+      - MONGODB_DATABASE=${MONGODB_DATABASE:-reconciliation}
+      - MONGODB_AUTH_SOURCE=${MONGODB_AUTH_SOURCE:-admin}
+
       # Database Connection Settings (Optional)
       - USE_ENV_DB_CONFIGS=${USE_ENV_DB_CONFIGS:-true}
       - SOURCE_DB_TYPE=${SOURCE_DB_TYPE:-oracle}
@@ -71,6 +79,8 @@ services:
 
     depends_on:
       falkordb:
+        condition: service_healthy
+      mongodb:
         condition: service_healthy
 
     networks:
@@ -108,6 +118,56 @@ services:
       start_period: 30s
 
   # ---------------------------------------------------------------------------
+  # Web Application Service (React Frontend)
+  # ---------------------------------------------------------------------------
+  web:
+    build:
+      context: ./web-app
+      dockerfile: Dockerfile
+    container_name: kg-builder-web
+    ports:
+      - "3000:80"
+    environment:
+      - REACT_APP_API_URL=http://localhost:8000/api/v1
+    depends_on:
+      app:
+        condition: service_healthy
+    networks:
+      - kg-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
+
+  # ---------------------------------------------------------------------------
+  # MongoDB Service (for Reconciliation Results Storage)
+  # ---------------------------------------------------------------------------
+  mongodb:
+    image: mongo:7.0
+    container_name: kg-builder-mongodb
+    ports:
+      - "27017:27017"
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGODB_USERNAME:-admin}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGODB_PASSWORD:-admin123}
+      - MONGO_INITDB_DATABASE=reconciliation
+    volumes:
+      - mongodb-data:/data/db
+      - mongodb-config:/data/configdb
+    networks:
+      - kg-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 20s
+
+  # ---------------------------------------------------------------------------
   # Optional: Redis for caching (if needed)
   # ---------------------------------------------------------------------------
   # redis:
@@ -140,6 +200,12 @@ networks:
 volumes:
   falkordb-data:
     name: kg-builder-falkordb-data
+    driver: local
+  mongodb-data:
+    name: kg-builder-mongodb-data
+    driver: local
+  mongodb-config:
+    name: kg-builder-mongodb-config
     driver: local
   # redis-data:
   #   name: kg-builder-redis-data
