--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ falkordb>=1.0.1
 # Database drivers
 mysql-connector-python==8.2.0
 sqlalchemy==2.0.23
+pymongo==4.6.1
 
 # LLM Integration
 openai==1.3.9
