--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 # FalkorDB Configuration
-FALKORDB_HOST=localhost
+# Use 'falkordb' when running in Docker, 'localhost' when running locally
+FALKORDB_HOST=falkordb
 FALKORDB_PORT=6379
 FALKORDB_PASSWORD=
 
 # OpenAI Configuration (for LLM-based extraction)
-OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_API_KEY=
 OPENAI_MODEL=gpt-3.5-turbo
 OPENAI_TEMPERATURE=0.7
 OPENAI_MAX_TOKENS=2000
@@ -25,7 +26,8 @@ API_RELOAD=true
 # JDBC Configuration
 # =============================================================================
 # Path to JDBC driver JAR files
-JDBC_DRIVERS_PATH=D:\\learning\\mysql-connector-j-9.4.0\\mysql-connector-j-9.4.0\\mysql-connector-j-8.0.33.jar
+# For Docker: use /app/jdbc_drivers, for local use your Windows path
+JDBC_DRIVERS_PATH=D:\learning\dq-poc\jdbc_drivers
 
 # =============================================================================
 # Database Connection Settings for Reconciliation
@@ -41,7 +43,8 @@ USE_ENV_DB_CONFIGS=true
 SOURCE_DB_TYPE=mysql
 
 # Database connection details
-SOURCE_DB_HOST=localhost
+# Use 'host.docker.internal' to connect to host machine from Docker container
+SOURCE_DB_HOST=host.docker.internal
 SOURCE_DB_PORT=3306
 SOURCE_DB_DATABASE=ordermgmt
 
@@ -59,7 +62,8 @@ SOURCE_DB_SERVICE_NAME=
 TARGET_DB_TYPE=mysql
 
 # Database connection details
-TARGET_DB_HOST=localhost
+# Use 'host.docker.internal' to connect to host machine from Docker container
+TARGET_DB_HOST=host.docker.internal
 TARGET_DB_PORT=3306
 TARGET_DB_DATABASE=newamazon
 
@@ -127,4 +131,15 @@ TARGET_DB_SERVICE_NAME=
 # - Fill in database credentials
 # - Set USE_ENV_DB_CONFIGS=true
 # - Make API requests without source_db_config/target_db_config in payload
+
+# =============================================================================
+# MongoDB Configuration (for reconciliation results storage)
+# =============================================================================
+MONGODB_HOST=localhost
+MONGODB_PORT=27017
+MONGODB_USERNAME=
+MONGODB_PASSWORD=
+MONGODB_DATABASE=reconciliation
+MONGODB_AUTH_SOURCE=admin
+MONGODB_RESULTS_COLLECTION=reconciliation_results
 
