more kpi added, llm enable

--- a/.env
+++ b/.env
@@ -74,6 +74,13 @@ TARGET_DB_PASSWORD=Baps@1234
 # Oracle-specific: Service name (optional, use instead of SID)
 TARGET_DB_SERVICE_NAME=
 
+LANDING_DB_ENABLED=true
+  LANDING_DB_HOST=localhost
+  LANDING_DB_PORT=3306
+  LANDING_DB_DATABASE=reconciliation_landing
+  LANDING_DB_USERNAME=root
+  LANDING_DB_PASSWORD=Baps@1234
+
 # =============================================================================
 # EXAMPLE CONFIGURATIONS FOR DIFFERENT DATABASE TYPES
 # =============================================================================
