--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ falkordb>=1.0.1
 
 # Database drivers
 mysql-connector-python==8.2.0
+pymysql==1.1.0  # For landing database (MySQL)
+jaydebeapi==1.2.3  # For JDBC connections to source/target DBs
 sqlalchemy==2.0.23
 pymongo==4.6.1
 
