KPI screen added

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ FALKORDB_PORT=6379
 FALKORDB_PASSWORD=
 
 # OpenAI Configuration (for LLM-based extraction)
-OPENAI_API_KEY=Key
+OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4
 OPENAI_TEMPERATURE=0.7
 OPENAI_MAX_TOKENS=2000
