--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ openai==1.3.9
 # Utilities
 python-dotenv==1.0.0
 python-multipart==0.0.6
+filelock==3.13.1  # For file-based KPI storage concurrency
 
 # Development dependencies (optional)
 pytest==7.4.3
