--- a/web-app/package.json
+++ b/web-app/package.json
@@ -12,7 +12,10 @@
     "react-dom": "^18.2.0",
     "react-force-graph-2d": "^1.25.4",
     "react-router-dom": "^6.20.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-vega": "^8.0.0",
+    "vega": "^6.2.0",
+    "vega-lite": "^6.4.1"
   },
   "proxy": "http://localhost:8000",
   "scripts": {
