--- a/web-app/package.json
+++ b/web-app/package.json
@@ -12,7 +12,10 @@
     "react-dom": "^18.2.0",
     "react-force-graph-2d": "^1.25.4",
     "react-router-dom": "^6.20.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-sparklines": "^1.7.0",
+    "recharts": "^2.15.4",
+    "to-regex-range": "^5.0.1"
   },
   "proxy": "http://localhost:8000",
   "scripts": {
