--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ FALKORDB_PASSWORD=
 
 # OpenAI Configuration (for LLM-based extraction)
 OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-3.5-turbo
+OPENAI_MODEL=gpt-5
 OPENAI_TEMPERATURE=0.7
 OPENAI_MAX_TOKENS=2000
 
