--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ FALKORDB_PORT=6379
 FALKORDB_PASSWORD=
 
 # OpenAI Configuration (for LLM-based extraction)
-OPENAI_API_KEY=Test
+OPENAI_API_KEY=TEST
 OPENAI_MODEL=gpt-4o
 OPENAI_TEMPERATURE=0
 OPENAI_MAX_TOKENS=2000
