--- a/web-app/package.json
+++ b/web-app/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.19",
-    "@mui/material": "^5.14.19",
+    "@mui/icons-material": "^6.5.0",
+    "@mui/material": "^6.5.0",
+    "@mui/x-date-pickers": "^6.20.2",
+    "ajv": "^8.17.1",
     "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-force-graph-2d": "^1.25.4",
@@ -18,6 +21,7 @@
     "recharts": "^2.15.4",
     "to-regex-range": "^5.0.1",
     "vega": "^6.2.0",
+    "vega-embed": "^7.1.0",
     "vega-lite": "^6.4.1"
   },
   "proxy": "http://localhost:8000",
